--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
         uses: jaroldwong/ecr-push-and-ecs-deploy@v1.1
         with:
           ecr-registry: ${{ steps.login-ecr.outputs.registry }}
-          ecr-repository: 'ds-exam'
-          ecs-cluster: 'ds-exam'
-          ecs-service: 'ds-exam-service'
+          ecr-repository: ds-exam
+          ecs-cluster: ds-exam
+          ecs-service: ds-exam-service
