--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,31 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and redeploy
-        uses: jaroldwong/ecr-push-and-ecs-deploy@v1.1
+      - name: Build and Push
+        env:
+          ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
+          ECR_REPOSITORY: ds-exam
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        
+      - name: Render ECS task Definition
+        id: render-web-container
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          ecr-registry: ${{ steps.login-ecr.outputs.registry }}
-          ecr-repository: ds-exam
+          task-definition: ecs-task-definition.json
+          container-name: task-container
+          image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          environment-variables: "LOG_LEVEL=info"
+        
+      - name: Debug Task Definition
+        run: |
+          echo "Task Definition Contents"
+          cat ${{steps.render-web-container.outputs.task-definition}}
+
+      - name: Build and Deploy
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1.1
+        with:
+          task-definition: ${{steps.render-web-container.outputs.task-definition}}
           ecs-cluster: ds-exam
           ecs-service: ds-exam-service
